# probus

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  momentum_backtest.py
src/probus/: __init__.py  cli.py  report.py  runner.py
src/probus/rules/: __init__.py  _utils.py  base.py
src/probus/rules/conceptual_soundness/: cs001_lookahead_shift_negative.py  cs002_same_period_signal_execution.py  cs003_scaler_fit_full_dataset.py
src/probus/rules/outcomes_analysis/: oa001_no_transaction_costs.py
src/probus/rules/process_verification/: pv001_missing_random_seed.py
src/probus/rules/robustness_testing/: rt001_random_split_time_series.py
tests/: conftest.py  test_report_snapshot.py
tests/rules/: test_test_file_policy.py
tests/rules/conceptual_soundness/: test_cs001.py  test_cs002.py  test_cs003.py
tests/rules/conceptual_soundness/fixtures/: cs001_bad.py  cs001_good.py  cs002_bad.py  cs002_good.py  cs003_bad.py  cs003_good.py
tests/rules/outcomes_analysis/: test_oa001.py
tests/rules/outcomes_analysis/fixtures/: oa001_bad.py  oa001_good.py
tests/rules/process_verification/: test_pv001.py
tests/rules/process_verification/fixtures/: pv001_bad.py  pv001_good.py
tests/rules/robustness_testing/: test_rt001.py
tests/rules/robustness_testing/fixtures/: rt001_bad.py  rt001_good.py
tests/snapshots/test_report_snapshot/test_report_no_findings/: report_no_findings.md
tests/snapshots/test_report_snapshot/test_report_with_findings/: report_with_findings.md
