[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probus"
version = "0.2.0"
description = "An open-source toolkit for model risk checks in Python-based quantitative research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
]

[project.optional-dependencies]
# Notebook (.ipynb) support is planned for v0.3 and not used at runtime yet.
notebooks = [
    "nbformat>=5.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-snapshot>=0.9.0",
]

[project.scripts]
probus = "probus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/probus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
